--- a/SilkScreenOrder/Views/Home/Index.cshtml
+++ b/SilkScreenOrder/Views/Home/Index.cshtml
@@ -32,6 +32,8 @@
                                 Screen.Print.Dash
                             </a>
                         </div>
+                    </div>
+                </div>
                 <!-- Main Menu -->
                 <div class="side-menu-container">
                     <ul class="nav navbar-nav">
