--- a/SilkScreenOrder/app/partials/home.html
+++ b/SilkScreenOrder/app/partials/home.html
@@ -1,7 +1,7 @@
-﻿
+﻿<div class="container">
     <div class="row">
         <!-- OrderForm Panel -->
-        <div class="col-lg-3 col-md-6">
+        <div class="col-lg-4 col-md-6">
             <div class="panel panel-primary">
                 <div class="panel-heading">
                     <div class="row">
@@ -24,7 +24,7 @@
         </div>
 
         <!-- Orders Panel-->
-        <div class="col-lg-3 col-md-6">
+        <div class="col-lg-4 col-md-6">
             <div class="panel panel-primary">
                 <div class="panel-heading">
                     <div class="row">
@@ -47,7 +47,7 @@
         </div>
 
         <!-- Customer Panel -->
-        <div class="col-lg-3 col-md-6">
+        <div class="col-lg-4 col-md-6">
             <div class="panel panel-primary">
                 <div class="panel-heading">
                     <div class="row">
@@ -68,7 +68,6 @@
                 </a>
             </div>
         </div>
-
-        
     </div>  <!-- end of row -->
-
+    <hr class="divide-line" />
+</div> <!-- end of container -->
