--- a/SilkScreenOrder/Content/main.css
+++ b/SilkScreenOrder/Content/main.css
@@ -35,6 +35,7 @@
 }
 .side-menu .navbar-nav li a {
   padding: 15px;
+  color: white;
 }
 .side-menu .navbar-nav li a .glyphicon {
   padding-right: 10px;
@@ -44,6 +45,7 @@
 }
 .side-menu .brand-name-wrapper .navbar-brand {
   display: block;
+  color: white;
 }
 /* Main body section */
 .side-body {
@@ -63,6 +65,7 @@
   }
   .side-menu .brand-name-wrapper .navbar-brand {
     display: inline-block;
+    color: white;
   }
   /* Slide in animation */
   @-moz-keyframes slidein {
@@ -239,4 +242,22 @@ textarea{
 small-border{
     border: 2px solid black;
     border-style: solid;
+}
+
+hr.divide-line{
+    padding: 0;
+    border: none;
+    border-top: solid 2px;
+    text-align: center;
+    max-width: 100%;
+    margin: 25px auto 30px;
+}
+
+hr.small-line{
+    padding: 0;
+    border: none;
+    border-top: solid 2px;
+    text-align: center;
+    max-width: 30%;
+    margin: 25px auto 30px;
 }
