--- a/SilkScreenOrder/app/partials/customer.html
+++ b/SilkScreenOrder/app/partials/customer.html
@@ -1,5 +1,5 @@
-﻿<h1>Customers</h1>
-
+﻿<h1 class="text-center">Customers</h1>
+<hr class="small-line" />
 <div class="container">
     <div class="row">
         <ul class="col-md-4 list-unstyled" ng-repeat="customer in customerlist">
