--- a/SilkScreenOrder/app/partials/orderform.html
+++ b/SilkScreenOrder/app/partials/orderform.html
@@ -1,4 +1,5 @@
-﻿<h1>OrderForm</h1>
+﻿<h1 class="text-center">Order Form</h1>
+<hr class="small-line" />
 <div class="container">
     <div class="row">
         <div class="col-md-5">
@@ -42,6 +43,7 @@
     </div> <!-- end of row -->
 
     <br />
+    <hr class="divide-line" />
     <br />
 
     <!--Design-->
@@ -73,6 +75,7 @@
     </div> <!-- end of row -->
 
     <br />
+    <hr class="divide-line" />
     <br />
 
     <!--Apparel-->
@@ -104,8 +107,9 @@
     </div> <!-- end of row -->
 
     <br />
+    <hr class="divide-line" />
     <br />
-    
+
     <!-- Fees -->
     <div class="row">
         <div class="col-md-5">
@@ -177,8 +181,6 @@
             </div>
         </div>
     </div> <!-- end of row -->
-    
-
     <!--AdditonalInfo-->
     <div class="row">
         <div class="col-md-7">
