total price expression, need to get printing fee to post

--- a/SilkScreenOrder/app/partials/orderdetails.html
+++ b/SilkScreenOrder/app/partials/orderdetails.html
@@ -58,7 +58,7 @@
             <div class="row">
                 <div class="col-sm-12">
                     <h4>Additional Notes</h4>
-                    <p>{{selectedOrder.AdditionalNotesToPrinter}}</p>
+                    <p>{{selectedOrder.AdditionalNotes}}</p>
                 </div>
             </div>
                 
