final MVP only styling left but everything works

--- a/SilkScreenOrder/Views/Home/Index.cshtml
+++ b/SilkScreenOrder/Views/Home/Index.cshtml
@@ -3,18 +3,14 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Silk Screen D-board</title>
+    <title>Silk Screen Sales Dashboard</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
 </head>
 <body ng-app="SilkScreen">
-    
-
     <div class="row">
-     
         <div class="side-menu">
-
             <nav class="navbar navbar-default" role="navigation">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
@@ -37,9 +33,9 @@
                 <!-- Main Menu -->
                 <div class="side-menu-container">
                     <ul class="nav navbar-nav">
+                        <li><a href="/#!/home">Home</a></li>
                         <li><a href="/#!/orders">Orders</a></li>
                         <li><a href="/#!/orderform">Order Form</a></li>
-                        <li><a href="/#!/customer">Customer List</a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
             </nav>
