--- a/SilkScreenOrder/app/partials/orderdetails.html
+++ b/SilkScreenOrder/app/partials/orderdetails.html
@@ -65,7 +65,7 @@
 
         <div class="footer">
             <button class="btn-primary" ng-click="backToOrders()">Back to Orders</button>
-            <button class="btn-danger glyphicon-minus-sign" ng-click="deleteOrder(OrderFormId)"></button>
+            <button class="btn-danger" ng-click="deleteOrder(OrderFormId)"><i class="fa fa-trash" aria-hidden="true"></i></button>
         </div>
     </div>
 </div>
