--- a/SilkScreenOrder/app/partials/orderform.html
+++ b/SilkScreenOrder/app/partials/orderform.html
@@ -116,7 +116,7 @@
             <!-- Printing Fee -->
             <div class="form-group">
                 <label for="PrintingFee">Printing Fee</label>
-                <input type="number" class="form-control" id="PrintingFee" placeholder="Printing Fee" ng-change="recalculate()" ng-model="newOrder.OrderForm.PrintingFee" />
+                <input type="number" class="form-control" id="PrintingFee" placeholder="Printing Fee" ng-change="recalculate()" ng-model="newOrder.PrintingFee" />
             </div>
             <!-- Design Fee -->
             <div class="form-group">
