--- a/SilkScreenOrder/app/partials/orders.html
+++ b/SilkScreenOrder/app/partials/orders.html
@@ -1,17 +1,15 @@
-﻿<h1 class="text-center">Orders</h1>
-<hr class="small-line" /
+﻿
 <div class="container">
+    <h1>Orders</h1>
     <div class="row">
-        <div class="col-md-8">
+        <div class="col-md-12">
             <div class="row">
-                <div class="col-xs-6">
                     <div class="input-group">
                         <span class="input-group-btn">
-                            <button class="btn btn-default glyphicon-search"></button>
+                            <button class="btn btn-default"><i class="fa fa-search" aria-hidden="true"></i></button>
                         </span>
-                        <input type="text" class="form-control" placeholder="Search for ..." ng-model="searchText">
+                        <input type="text" class="form-control longer-input-box" placeholder="Search for ..." ng-model="searchText">
                     </div>
-                </div>
             </div>
             <br />
             <div class="table-responsive">
