--- a/SilkScreenOrder/Views/Home/Index.cshtml
+++ b/SilkScreenOrder/Views/Home/Index.cshtml
@@ -6,6 +6,8 @@
     <title>Silk Screen Sales Dashboard</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link href="https://fonts.googleapis.com/css?family=Abel|Ubuntu+Condensed" rel="stylesheet">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css">
 
 </head>
 <body ng-app="SilkScreen">
@@ -33,7 +35,7 @@
                 <!-- Main Menu -->
                 <div class="side-menu-container">
                     <ul class="nav navbar-nav">
-                        <li><a href="/#!/home">Home</a></li>
+                        <li><a href="/#!/">Home</a></li>
                         <li><a href="/#!/orders">Orders</a></li>
                         <li><a href="/#!/orderform">Order Form</a></li>
                     </ul>
@@ -55,5 +57,7 @@
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/angular")
     <script src="https://use.fontawesome.com/18b3f051aa.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.min.js"></script>
 </body>
 </html>
