--- a/SilkScreenOrder/app/partials/home.html
+++ b/SilkScreenOrder/app/partials/home.html
@@ -2,7 +2,7 @@
     <div class="row">
         <!-- OrderForm Panel -->
         <div class="col-lg-4 col-md-6">
-            <div class="panel panel-primary">
+            <div class="panel">
                 <div class="panel-heading">
                     <div class="row">
                         <div class="col-xs-3">
@@ -22,10 +22,9 @@
                 </a>
             </div>
         </div>
-
         <!-- Orders Panel-->
         <div class="col-lg-4 col-md-6">
-            <div class="panel panel-primary">
+            <div class="panel">
                 <div class="panel-heading">
                     <div class="row">
                         <div class="col-xs-3">
@@ -47,6 +46,7 @@
         </div>
     </div>  <!-- end of row -->
     <hr class="divide-line" />
+
 
 
 </div> <!-- end of container -->
