--- a/SilkScreenOrder/Content/main.css
+++ b/SilkScreenOrder/Content/main.css
@@ -1,52 +1,64 @@
-﻿body{
+﻿body {
+    font-family: 'Ubuntu Condensed', sans-serif;
+    font-size: 15px;
 }
 
 :focus {
-  outline: none;
+    outline: none;
 }
+
 .row {
-  margin-right: 0;
-  margin-left: 0;
+    margin-right: 0;
+    margin-left: 0;
 }
+
 .side-menu {
-  position: fixed;
-  width: 300px;
-  height: 100%;
-  background-color: steelblue;
-  border-right: 1px solid #e7e7e7;
-  font: white;
+    position: fixed;
+    width: 300px;
+    height: 100%;
+    background-color: darkslategrey;
+    border-right: 1px solid #e7e7e7;
+    font: white;
 }
-.side-menu .navbar {
-  border: none;
-  background-color: steelblue;
-}
-.side-menu .navbar-header {
-  width: 100%;
-}
-.side-menu .navbar-nav .active a {
-  background-color: transparent;
-  margin-right: -1px;
-  border-right: 5px solid #e7e7e7;
-}
-.side-menu .navbar-nav li {
-  display: block;
-  width: 100%;
-   color: white;
-}
-.side-menu .navbar-nav li a {
-  padding: 15px;
-  color: white;
-}
-.side-menu .navbar-nav li a .glyphicon {
-  padding-right: 10px;
-}
-.side-menu .brand-name-wrapper {
-  min-height: 50px;
-}
-.side-menu .brand-name-wrapper .navbar-brand {
-  display: block;
-  color: white;
-}
+
+    .side-menu .navbar {
+        border: none;
+        background-color: darkslategrey;
+    }
+
+    .side-menu .navbar-header {
+        width: 100%;
+    }
+
+    .side-menu .navbar-nav .active a {
+        background-color: transparent;
+        margin-right: -1px;
+        border-right: 5px solid #e7e7e7;
+    }
+
+    .side-menu .navbar-nav li {
+        display: block;
+        width: 100%;
+        color: white;
+    }
+
+        .side-menu .navbar-nav li a {
+            padding: 15px;
+            color: white;
+        }
+
+            .side-menu .navbar-nav li a .glyphicon {
+                padding-right: 10px;
+            }
+
+    .side-menu .brand-name-wrapper {
+        min-height: 50px;
+    }
+
+        .side-menu .brand-name-wrapper .navbar-brand {
+            display: block;
+            color: white;
+        }
 /* Main body section */
 .side-body {
     margin-left: 310px;
@@ -56,195 +68,101 @@
 }
 /* small screen */
 @media (max-width: 768px) {
-  .side-menu {
-    position: relative;
-    width: 100%;
-    height: 0;
-    border-right: 0;
-    border-bottom: 1px solid #e7e7e7;
-  }
-  .side-menu .brand-name-wrapper .navbar-brand {
-    display: inline-block;
-    color: white;
-  }
-  /* Slide in animation */
-  @-moz-keyframes slidein {
-    0% {
-      left: -300px;
+    .side-menu {
+        position: relative;
+        width: 100%;
+        height: 0;
+        border-right: 0;
+        border-bottom: 1px solid #e7e7e7;
     }
-    100% {
-      left: 10px;
-    }
-  }
-  @-webkit-keyframes slidein {
-    0% {
-      left: -300px;
-    }
-    100% {
-      left: 10px;
-    }
-  }
-  @keyframes slidein {
-    0% {
-      left: -300px;
-    }
-    100% {
-      left: 10px;
-    }
-  }
-  @-moz-keyframes slideout {
-    0% {
-      left: 0;
-    }
-    100% {
-      left: -300px;
-    }
-  }
-  @-webkit-keyframes slideout {
-    0% {
-      left: 0;
-    }
-    100% {
-      left: -300px;
-    }
-  }
-  @keyframes slideout {
-    0% {
-      left: 0;
-    }
-    100% {
-      left: -300px;
-    }
-  }
-  /* Slide side menu*/
-  /* Add .absolute-wrapper.slide-in for scrollable menu -> see top comment */
-  .side-menu-container > .navbar-nav.slide-in {
-    -moz-animation: slidein 300ms forwards;
-    -o-animation: slidein 300ms forwards;
-    -webkit-animation: slidein 300ms forwards;
-    animation: slidein 300ms forwards;
-    -webkit-transform-style: preserve-3d;
-    transform-style: preserve-3d;
-  }
-  .side-menu-container > .navbar-nav {
-    /* Add position:absolute for scrollable menu -> see top comment */
-    position: fixed;
-    left: -300px;
-    width: 300px;
-    top: 43px;
-    height: 100%;
-    border-right: 1px solid #e7e7e7;
-    background-color: #f8f8f8;
-    -moz-animation: slideout 300ms forwards;
-    -o-animation: slideout 300ms forwards;
-    -webkit-animation: slideout 300ms forwards;
-    animation: slideout 300ms forwards;
-    -webkit-transform-style: preserve-3d;
-    transform-style: preserve-3d;
-  }
- 
-  @-moz-keyframes bodyslidein {
-    0% {
-      left: 0;
-    }
-    100% {
-      left: 300px;
-    }
-  }
-  @-webkit-keyframes bodyslidein {
-    0% {
-      left: 0;
-    }
-    100% {
-      left: 300px;
-    }
-  }
-  @keyframes bodyslidein {
-    0% {
-      left: 0;
-    }
-    100% {
-      left: 300px;
-    }
-  }
-  @-moz-keyframes bodyslideout {
-    0% {
-      left: 300px;
-    }
-    100% {
-      left: 0;
-    }
-  }
-  @-webkit-keyframes bodyslideout {
-    0% {
-      left: 300px;
-    }
-    100% {
-      left: 0;
-    }
-  }
-  @keyframes bodyslideout {
-    0% {
-      left: 300px;
-    }
-    100% {
-      left: 0;
-    }
-  }
-  /* Slide side body*/
-  .side-body {
-    margin-left: 5px;
-    margin-top: 70px;
-    position: relative;
-    -moz-animation: bodyslideout 300ms forwards;
-    -o-animation: bodyslideout 300ms forwards;
-    -webkit-animation: bodyslideout 300ms forwards;
-    animation: bodyslideout 300ms forwards;
-    -webkit-transform-style: preserve-3d;
-    transform-style: preserve-3d;
-  }
-  .body-slide-in {
-    -moz-animation: bodyslidein 300ms forwards;
-    -o-animation: bodyslidein 300ms forwards;
-    -webkit-animation: bodyslidein 300ms forwards;
-    animation: bodyslidein 300ms forwards;
-    -webkit-transform-style: preserve-3d;
-    transform-style: preserve-3d;
-  }
-  /* Hamburger */
-  .navbar-toggle {
-    border: 0;
-    float: left;
-    padding: 18px;
-    margin: 0;
-    border-radius: 0;
-    background-color: #f3f3f3;
-  }
- .navbar-header {
-    /* this is probably redundant */
-    position: fixed;
-    z-index: 3;
-    background-color: #f8f8f8;
-  }
 
+        .side-menu .brand-name-wrapper .navbar-brand {
+            display: inline-block;
+            color: white;
+        }
+    /* Add .absolute-wrapper.slide-in for scrollable menu -> see top comment */
+    .side-menu-container > .navbar-nav.slide-in {
+        -moz-animation: slidein 300ms forwards;
+        -o-animation: slidein 300ms forwards;
+        -webkit-animation: slidein 300ms forwards;
+        animation: slidein 300ms forwards;
+        -webkit-transform-style: preserve-3d;
+        transform-style: preserve-3d;
+    }
+
+    .side-menu-container > .navbar-nav {
+        /* Add position:absolute for scrollable menu -> see top comment */
+        position: fixed;
+        left: -300px;
+        width: 300px;
+        top: 43px;
+        height: 100%;
+        border-right: 1px solid #e7e7e7;
+        background-color: #f8f8f8;
+        -moz-animation: slideout 300ms forwards;
+        -o-animation: slideout 300ms forwards;
+        -webkit-animation: slideout 300ms forwards;
+        animation: slideout 300ms forwards;
+        -webkit-transform-style: preserve-3d;
+        transform-style: preserve-3d;
+    }
+
+ 
+    /* Slide side body*/
+    .side-body {
+        margin-left: 5px;
+        margin-top: 70px;
+        position: relative;
+        -moz-animation: bodyslideout 300ms forwards;
+        -o-animation: bodyslideout 300ms forwards;
+        -webkit-animation: bodyslideout 300ms forwards;
+        animation: bodyslideout 300ms forwards;
+        -webkit-transform-style: preserve-3d;
+        transform-style: preserve-3d;
+    }
+
+    .body-slide-in {
+        -moz-animation: bodyslidein 300ms forwards;
+        -o-animation: bodyslidein 300ms forwards;
+        -webkit-animation: bodyslidein 300ms forwards;
+        animation: bodyslidein 300ms forwards;
+        -webkit-transform-style: preserve-3d;
+        transform-style: preserve-3d;
+    }
+    /* Hamburger */
+    .navbar-toggle {
+        border: 0;
+        float: left;
+        padding: 18px;
+        margin: 0;
+        border-radius: 0;
+        background-color: #f3f3f3;
+    }
+
+    .navbar-header {
+        /* this is probably redundant */
+        position: fixed;
+        z-index: 3;
+        background-color: #f8f8f8;
+    }
 }
 
 input,
-select{
+select {
     max-width: 280px;
 }
 
-textarea{
+textarea {
     width: 500px;
     height: 150px;
 }
 
-small-border{
+small-border {
     border: 2px solid black;
     border-style: solid;
 }
 
-hr.divide-line{
+hr.divide-line {
     padding: 0;
     border: none;
     border-top: solid 2px;
@@ -253,7 +171,7 @@ hr.divide-line{
     margin: 25px auto 30px;
 }
 
-hr.small-line{
+hr.small-line {
     padding: 0;
     border: none;
     border-top: solid 2px;
@@ -262,6 +180,22 @@ hr.small-line{
     margin: 25px auto 30px;
 }
 
-longer-input-box{
+longer-input-box {
     max-width: 100%;
+}
+
+.panel > .panel-heading {
+    background-image: none;
+    background-color: darkslategrey;
+    color: white;
+    border-color: darkslategrey;
+}
+
+btn {
+    color: darkslategrey;
+}
+
+.panel-footer {
+    background-color: darkslategrey;
+    color: white;
 }
