working and ready to go

--- a/SilkScreenOrder/Views/Home/Index.cshtml
+++ b/SilkScreenOrder/Views/Home/Index.cshtml
@@ -38,6 +38,7 @@
                         <li><a href="/#!/">Home</a></li>
                         <li><a href="/#!/orders">Orders</a></li>
                         <li><a href="/#!/orderform">Order Form</a></li>
+                        <li><a href="/#!/customers">Customer List</a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
             </nav>
