--- a/SilkScreenOrder/app/partials/orderdetails.html
+++ b/SilkScreenOrder/app/partials/orderdetails.html
@@ -26,8 +26,8 @@
             <div class="row">
                 <div class="col-sm-4">
                     <h4>Design</h4>
-                    <p>Height: {{selectedOrder.Design.DesignHeight}}</p>
-                    <p>Width: {{selectedOrder.Design.DesignWidth}}</p>
+                    <p>Height: {{selectedOrder.Design.DesignHeight}} inches</p>
+                    <p>Width: {{selectedOrder.Design.DesignWidth}} inches</p>
                     <p>Logo Location(s): {{selectedOrder.Design.LogoLocations}}</p>
                     <p># of Colors: {{selectedOrder.Design.AmountOfColorsOfDesign}}</p>
                     <p>Ink Color(s): {{selectedOrder.Design.InkColorsToBeUsed}}</p>
