--- a/SilkScreenOrder/Content/main.css
+++ b/SilkScreenOrder/Content/main.css
@@ -1,6 +1,6 @@
 ﻿body {
     font-family: 'Ubuntu Condensed', sans-serif;
-    font-size: 15px;
+    font-size: 16px;
 }
 
 :focus {
@@ -35,6 +35,9 @@
         margin-right: -1px;
         border-right: 5px solid #e7e7e7;
     }
+    .side-menu .navbar-nav :hover{
+        background-color: lightgray;
+    }
 
     .side-menu .navbar-nav li {
         display: block;
@@ -46,10 +49,6 @@
             padding: 15px;
             color: white;
         }
-
-            .side-menu .navbar-nav li a .glyphicon {
-                padding-right: 10px;
-            }
 
     .side-menu .brand-name-wrapper {
         min-height: 50px;
@@ -136,7 +135,7 @@
         padding: 18px;
         margin: 0;
         border-radius: 0;
-        background-color: #f3f3f3;
+        background-color: darkslategray;
     }
 
     .navbar-header {
@@ -198,4 +197,11 @@ btn {
 .panel-footer {
     background-color: darkslategrey;
     color: white;
+}
+
+.img-width{
+    width: 105%;
+    height:175px;
+    margin-left: -26px;
+    margin-top: -20px;
 }
