--- a/SilkScreenOrder/app/partials/home.html
+++ b/SilkScreenOrder/app/partials/home.html
@@ -1,4 +1,11 @@
-﻿<div class="container">
+﻿<div class="row">
+    <div class="col-md-12">
+        <img class="img-width" src="app/images/PanoSqueegee.jpg" />
+    </div>
+</div>
+
+<div class="container">
+    <hr class="divide-line" />
     <div class="row">
         <!-- OrderForm Panel -->
         <div class="col-lg-4 col-md-6">
@@ -13,9 +20,31 @@
                         </div>
                     </div>
                 </div>
-                <a href="#!/orderform">
+                <a href="/#!/orderform">
                     <div class="panel-footer">
                         <span class="pull-left">Order Forms</span>
+                        <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                        <div class="clearfix"></div>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <!-- Customers Panel-->
+        <div class="col-lg-4 col-md-6">
+            <div class="panel">
+                <div class="panel-heading">
+                    <div class="row">
+                        <div class="col-xs-3">
+                            <i class="fa fa-users fa-5x"></i>
+                        </div>
+                        <div class="col-xs-9 text-right">
+                            <div>Customers</div>
+                        </div>
+                    </div>
+                </div>
+                <a href="/#!/customers">
+                    <div class="panel-footer">
+                        <span class="pull-left">View Customers</span>
                         <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
                         <div class="clearfix"></div>
                     </div>
@@ -31,13 +60,13 @@
                             <i class="fa fa-shopping-cart fa-5x"></i>
                         </div>
                         <div class="col-xs-9 text-right">
-                            <div>Show Orders!</div>
+                            <div>Orders</div>
                         </div>
                     </div>
                 </div>
-                <a href="#!/orders">
+                <a href="/#!/orders">
                     <div class="panel-footer">
-                        <span class="pull-left">View Details</span>
+                        <span class="pull-left">View Orders</span>
                         <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
                         <div class="clearfix"></div>
                     </div>
@@ -46,7 +75,8 @@
         </div>
     </div>  <!-- end of row -->
     <hr class="divide-line" />
-
-
-
+    <div class="row">
+        <h2>Welcome to Screen.Print.Dash</h2>
+        <p>Proin ut quam eros. Donec sed lobortis diam. Nulla nec odio lacus. Quisque porttitor egestas dolor in placerat. Nunc vehicula dapibus ipsum. Duis venenatis risus non nunc fermentum dapibus. Morbi lorem ante, malesuada in mollis nec, auctor nec massa. Aenean tempus dui eget felis blandit at fringilla urna ultrices. Suspendisse feugiat, ante et viverra lacinia, lectus sem lobortis dui, ultricies consectetur leo mauris at tortor. Nunc et tortor sit amet orci consequat semper. Nulla non fringilla diam. </p>
+    </div><!-- end of row -->
 </div> <!-- end of container -->
