--- a/SilkScreenOrder/app/partials/orders.html
+++ b/SilkScreenOrder/app/partials/orders.html
@@ -13,7 +13,7 @@
             </div>
             <br />
             <div class="table-responsive">
-                <table class="table table-bordered ">
+                <table class="table table-bordered table-hover">
                     <thead>
                         <tr>
                             <th>Order Number</th>
